root-constraint/bad1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-security-context
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
    # NO securityContext specified - DENIED
