root-constraint/good1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-container-level
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      runAsNonRoot: true
      runAsUser: 1000
